--- a/config/kibana.cfg.example
+++ b/config/kibana.cfg.example
@@ -1,7 +1,10 @@
 {
     "dates":["2016-08-18", "2016-08-17", "2016-08-16", "2016-08-15"],
     "products":["product1", "product2"],
-    "catalogues":["catalogue1", "catalogue2"],
+    "catalogues":{
+        "default": ["catalogue1", "catalgue2"],
+        "product2": ["catalogue2"]
+    },
 
     "source_url":"http://mysite.org/getlog/csv",
     "source_id_start":0,
@@ -11,5 +14,5 @@
     "elastic_url":"http://localhost:9200/",
     "recreate_index": true,
     "index_prefix":"prefix",
-    "kibana_type":"log"
+    "elastic_type":"log"
 }
